Remove hats from the p

--- a/AB testing and power analysis.ipynb
+++ b/AB testing and power analysis.ipynb
@@ -692,7 +692,7 @@
     "\n",
     "where $N_{i}$ is the sample size required in each group (i=1,2), $\\alpha$ is the selected level of significance and $Z_{1-\\alpha/2}$ is the z-score that corresponds to the $1-\\alpha/2$ confidence interval. $Z_{1-\\beta}$ is the z-score for the desired power. Finally, $ES$ is the effect size, defined as:\n",
     "\n",
-    "$$ES = \\frac{\\left|p_{exp} - p_{ctrl}\\right|}{\\sigma} = \\frac{\\left|p_{exp} - p_{ctrl}\\right|}{\\sqrt{\\hat{p}_{pool}\\left(1 - \\hat{p}_{pool}\\right)}}$$\n",
+    "$$ES = \\frac{\\left|p_{exp} - p_{ctrl}\\right|}{\\sigma} = \\frac{\\left|p_{exp} - p_{ctrl}\\right|}{\\sqrt{p_{pool}\\left(1 - p_{pool}\\right)}}$$\n",
     "\n",
     "where the numerator is the expected difference under $H_{A}$, the alternative hypothesis, and $\\sigma$ is the standard deviation. Using the standard cut off values for $\\alpha$ at 0.05 and $\\beta$ at 0.2, i.e. a power of 0.8, the formula now looks like this --\n",
     "\n",
