--- a/AB testing and power analysis.ipynb
+++ b/AB testing and power analysis.ipynb
@@ -874,7 +874,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### My attempt at deri of the sample size formula. Something isn't right in the math though. Not sure what ... yet.\n",
+    "### My attempt at deriving the necessary sample size formula. Something isn't right in the math though. Not sure what ... yet.\n",
     "\n",
     "The threshold for $\\alpha$ and $\\beta$ fall on the exact same value, i.e. the margins of error for $H_{0}$ and $H_{A}$ meet in the middle.\n",
     "\n",
