Start about high level metrics

--- a/Metrics.ipynb
+++ b/Metrics.ipynb
@@ -39,7 +39,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# How to go about making a definition"
+    "# How to go about making a metric definition\n",
+    "\n",
+    "1. First, come up with a high level concept for a metric -- a one sentence summary that everyone can understand, e.g. \"active users\" or \"click-through-probability.\"\n",
+    "2. The second step is to figure out the details.\n",
+    "  - E.g. how do you define \"active\" in \"active users?\" 7 day active? 28 day active? What events count as activity?\n",
+    "3. Summarize all these individual measurements into a single metric (sum, count, average, median).\n",
+    "\n",
+    "And finally, you have a metric definition that you can use.\n",
+    "\n",
+    "Should you use a single metric or multiple metrics? For invariant checking, of course, check multiple metrics. For evaluation, however, it depends on the company and general comfort with data. \n",
+    "\n",
+    "Reasons to use multiple metrics:\n",
+    "- Some company leaders may be more comfortable with a suite of metrics where they can see how things move. \n",
+    "- Can create a composite metric\n",
+    "  - E.g. an objective function or an OEC (overall evaluation criterion) can be a weighted function that outputs a single combined metric that summarizes all the individual metrics (e.g. revenue, users, etc)\n",
+    "  - Possibly problematic if you try to overoptimize or need to explain why its moving, and return to talking about individual metrics\n",
+    "  \n",
+    "Reasons to use a single metric:\n",
+    "- On the other hand, for PR or external reporting purposes, you may need to settle on a single overall objective.\n",
+    "- Also, if you are a large company, it helps for multiple teams to be aligned on a single metric.\n",
+    "\n",
+    "Finally, you want to consider how generalizable a metric is. If you're running a whole suite of A/B tests, then ideally you have one or more metrics that you can run across the entire suite. It's better to have a less optimal metric for a test that you can use across the suite of tests for comparison than to have a perfect metric for your test that is not generalizable. More custom = more risk!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# High level metrics for tests\n",
+    "\n"
    ]
   }
  ],
